# Packaging

./: .gitignore  README.md  pyproject.toml  setup.cfg
.hypothesis/constants/: 41433604f27bd103
doc/source/: conf.py
doc/source/api/: ng20_lda.cli.rst
src/ng20_lda/: lines.py  logging_utils.py
src/ng20_lda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ng20_lda/cli/: app.py  describe.py  export.py  train.py
tests/: test_lines.py  test_lines_hypothesis.py
