[metadata]
name = ng20-lda
version = 0.1.0
description = CLI tools for exporting 20newsgroups and training/using an LDA model
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
package_dir =
    = src
install_requires =
    scikit-learn
    joblib
    numpy
    scipy
    typer
    fastapi
    uvicorn
    pytest
    hypothesis

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ng20 = ng20_lda.cli.app:app

